Fix spacings

--- a/_sass/layouts/index.sass
+++ b/_sass/layouts/index.sass
@@ -4,6 +4,7 @@
     background-repeat: no-repeat
     header
         @include grid(12)
+        padding-bottom: $grid-gutter * 8
         > div
             &:nth-child(1)
                 grid-column: 1/8
