--- a/_sass/layouts/work.sass
+++ b/_sass/layouts/work.sass
@@ -1,7 +1,9 @@
 .members
     @include grid(4)
+    padding-bottom: $grid-gutter * 5
     > h2
         grid-column: 1/5
+        margin-bottom: $grid-gutter * 4
         text-align: center
     article
         a
